# MiniChat_client

./: CMakeLists.txt  CMakeLists.txt.gWWisX  README.md  appimg.qrc  chatdisplayer.cpp  chatdisplayer.h  chatdisplayer.ui  chatwidget.cpp  chatwidget.h  chatwidget.ui  datahead.cpp  datahead.h  downconnect.cpp  downconnect.h  entity.cpp  entity.h  filemanager.cpp  filemanager.h  informationwidget.cpp  informationwidget.h  informationwidget.ui  loginscene.cpp  loginscene.h  loginwidget.cpp  loginwidget.h  loginwidget.ui  main.cpp  mainscene.cpp  mainscene.h  mainscene.ui  mapper.cpp  mapper.h  notifywidget.cpp  notifywidget.h  notifywidget.ui  personal.cpp  personal.h  personal.ui  registwidget.cpp  registwidget.h  (+16 more)
assets/: server_address.txt
design/: 数据库表.docx
